--- a/ExpotiFlixBack/pom.xml
+++ b/ExpotiFlixBack/pom.xml
@@ -44,6 +44,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- ✅ Lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -54,5 +62,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
