--- a/ExpotiFlixBack/src/main/resources/application.properties
+++ b/ExpotiFlixBack/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.application.name=Proyecto Spring
 server.port=8080
 
 spotify.api.url=https://api.spotify.com/v1
+
+spring.datasource.url=jdbc:h2:mem:spotifydb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
